--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>React Starter</title>
+    <title>Blogger AB</title>
 </head>
 <body>
   <div id="root" />
